feat: implementa versão inicial da rota de cadastro
