# swagger.yaml
@@ -8,7 +8,6 @@ servers:
   - url: http://localhost:8080
 
 components:
-
   securitySchemes:
     bearerAuth:
       type: http
@@ -16,7 +15,6 @@ components:
       bearerFormat: JWT
 
   schemas:
-
     Usuario:
       type: object
       properties:
@@ -160,7 +158,8 @@ components:
           type: array
           items:
             type: string
-          example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
+          example:
+            ['https://example.com/image1.jpg', 'https://example.com/image2.jpg']
 
     ProjetoDetail:
       type: object
@@ -255,7 +254,8 @@ components:
           type: array
           items:
             type: string
-          example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
+          example:
+            ['https://example.com/image1.jpg', 'https://example.com/image2.jpg']
 
     ReuniaoResponse:
       type: object
@@ -387,8 +387,7 @@ components:
           items:
             $ref: '#/components/schemas/IntegranteProjeto'
 paths:
-
-  /api/v1/cadastrar:
+  /api/v1/auth/cadastrar:
     post:
       tags:
         - Autenticação
@@ -420,7 +419,6 @@ paths:
                   example: 12345678
                   maxLength: 64
                   minLength: 8
-
 
       responses:
         '201':
@@ -458,7 +456,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Erro'
 
-  /api/v1/login:
+  /api/v1/auth/login:
     post:
       tags:
         - Autenticação
